--- a/Module_01/CMakeLists.txt
+++ b/Module_01/CMakeLists.txt
@@ -33,8 +33,15 @@ target_include_directories(${PROJECT_NAME} PUBLIC Interface/inc)
 if(TEST)
 
     #Include Google Test
-    add_subdirectory(googletest)
-    include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
+    include(FetchContent)
+    FetchContent_Declare(
+        googletest
+        GIT_REPOSITORY https://github.com/google/googletest.git
+        GIT_TAG release-1.12.1
+        )
+    FetchContent_MakeAvailable(googletest)
+
+    enable_testing()
 
     #Add test executable
     add_executable(testexe ${SOURCE_FILES} ${TEST_FILES} )
