--- a/.github/workflows/Module_01_1.yml
+++ b/.github/workflows/Module_01_1.yml
@@ -3,7 +3,6 @@ name: CI Pipeline for Module_01 only
 on:
   push:
     branches:
-      - master
       - develop
     
 jobs:
@@ -12,7 +11,9 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
+      with:
+        ref: develop
 
     - name: Set up build environment
       run: sudo apt-get update && sudo apt-get install -y build-essential
