--- a/.github/workflows/Module_01_3.yml
+++ b/.github/workflows/Module_01_3.yml
@@ -1,6 +1,10 @@
-name: CI Pipeline for Module_01 only patch trigger example
+name: CI Pipeline for Module_01 only manual and patch trigger example
 
 on:
+  #Manual trigger
+  workflow_dispatch:
+
+  #Pull request path trigger
   pull_request:
     branches:
       - master
@@ -17,7 +21,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Set up build environment
       run: sudo apt-get update && sudo apt-get install -y build-essential
